--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,25 +2,38 @@ name: fe_middleware_payment
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment: 
-  sdk: '>=3.2.3 <4.0.0'
+environment:
+  sdk: ">=3.2.3 <4.0.0"
 
-dependencies: 
-  cupertino_icons: ^1.0.2
+dependencies:
+  flutter:
+    sdk: flutter
+
+  #State Management
   get: 4.6.6
+
+  #Networking
+  http: ^1.2.0
+
+  #Widget
+  flutter_spinkit: ^5.2.0
+  cupertino_icons: ^1.0.2
+
+  #Utils
   dartz: ^0.10.1
   flutter_svg: ^2.0.9
-  flutter: 
-    sdk: flutter
+  dotenv: ^4.2.0
+  intl: ^0.19.0
 
-dev_dependencies: 
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
   flutter_lints: ^2.0.0
-  flutter_test: 
-    sdk: flutter
 
-flutter: 
+flutter:
   uses-material-design: true
 
   assets:
     - assets/images/
-
+    - assets/images/payment/
+    - .env
