Fix Duitku OrderQRIS Payment

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,16 +14,22 @@ dependencies:
 
   #Networking
   http: ^1.2.0
+  socket_io_client: ^3.1.2
+  connectivity_plus: ^6.1.4
 
   #Widget
   flutter_spinkit: ^5.2.0
   cupertino_icons: ^1.0.2
+  pretty_qr_code: ^3.4.0
 
   #Utils
   dartz: ^0.10.1
   flutter_svg: ^2.0.9
   flutter_dotenv: ^5.2.1
   intl: ^0.20.2
+  dynamic_path_url_strategy: ^1.0.0
+  file_saver: ^0.3.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
