--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,25 +1,42 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "fe_middleware_payment",
-            "request": "launch",
-            "type": "dart"
-        },
-        {
-            "name": "fe_middleware_payment (profile mode)",
-            "request": "launch",
-            "type": "dart",
-            "flutterMode": "profile"
-        },
-        {
-            "name": "fe_middleware_payment (release mode)",
-            "request": "launch",
-            "type": "dart",
-            "flutterMode": "release"
-        }
-    ]
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "DEV",
+      "request": "launch",
+      "type": "dart",
+      "program": "${workspaceFolder}/lib/main.dart",
+      "flutterMode": "debug",
+      "preLaunchTask": "replace-env-development",
+      "args": [
+        "--web-port",
+        "10000"
+      ],
+    },
+    {
+      "name": "PROD",
+      "request": "launch",
+      "type": "dart",
+      "program": "${workspaceFolder}/lib/main.dart",
+      "flutterMode": "debug",
+      "preLaunchTask": "replace-env-production",
+      "args": [
+        "--web-port",
+        "10001"
+      ]
+    },
+    {
+      "name": "Web (WASM)",
+      "request": "launch",
+      "type": "dart",
+      "program": "${workspaceFolder}/lib/main.dart",
+      "flutterMode": "debug",
+      "preLaunchTask": "replace-env-development",
+      "args": [
+        "-d",
+        "chrome",
+        "--wasm"
+      ]
+    }
+  ]
 }
