--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,22 @@
 {
-    // "dart.flutterSdkPath": ".fvm/flutter_sdk",
-    // "search.exclude": {
-    //     "**/.fvm": true
-    // },
-    // "files.watcherExclude": {
-    //     "**/.fvm": true
-    // },
-    // "dart.addSdkToTerminalPath": false
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[dart]": {
+    "editor.defaultFormatter": "Dart-Code.dart-code"
+  },
+  "editor.formatOnSave": true,
+  "java.configuration.updateBuildConfiguration": "interactive",
+  "cmake.ignoreCMakeListsMissing": true,
+  "makefile.configureOnOpen": false,
+  "postman.settings.dotenv-detection-notification-visibility": false
 }
