--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ ENVIRONTMENT=development
 API_URL=http://localhost:3000
 BASE_URL=http://localhost:3000
 SOCKET_URL=http://localhost:3000
+VERSION=1.0.0
+BUILDNUMBER=1
